<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fire_fly</name>
  <version>0.0.1</version>
  <description>ROS2 WebRTC video streaming package</description>
  <maintainer email="lvganglvgang@gmail.com">gary</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-websockets</depend>
  <depend>python3-nest-asyncio</depend>
  <depend>realsense2_camera</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
